css/default.css
/* ... */
/***************************/
/*  Collapsible code blocks.
 */

.sourceCode.collapse {
    margin-top: 1.75em;
    margin-bottom: 1.75em;
}
.sourceCode.collapse pre {
    margin: 0;
}
.sourceCode.collapse.expanded .sourceCode {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}
.sourceCode.collapse.expanded-not > .collapse-content-wrapper pre {
    max-height: calc(  var(--collapse-toggle-top-height)
                     + var(--collapse-toggle-bottom-height));
    box-sizing: border-box;
    overflow: hidden;
}

.sourceCode.collapse.expanded-not > .collapse-content-wrapper.width-full {
    max-width: 100%;
    margin: 0 !important;
}

.sourceCode.collapse.expanded-not > .disclosure-button .part::before {
    opacity: 0.70;
}

.sourceCode.collapse > .disclosure-button .part.top .label,
.sourceCode.collapse > .disclosure-button .part.top .icon {
    margin-top: 1px;
}
.sourceCode.collapse > .disclosure-button .part.top .icon {
    margin-right: 1px;
}
.sourceCode.collapse > .disclosure-button .part.bottom .label {
    margin-bottom: 1px;
}

/**********************/
/*  Collapsible tables.
 */

.table-wrapper.collapse.expanded-not {
    overflow: hidden;
    margin-left: 0;
    padding: 0;
}

.table-wrapper.collapse > .disclosure-button .part.top .label,
.table-wrapper.collapse > .disclosure-button .part.top .icon {
    margin-top: 2px;
}

.table-wrapper.collapse.expanded .table {
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}

/****************************/
/*  Collapses in blockquotes.
 */

blockquote .collapse-block {
    --collapse-blockquote-side-padding: 1.25em;
    --collapse-blockquote-bottom-padding: 1em;
}
@media all and (max-width: 649px) {
    blockquote .collapse-block {
        --collapse-blockquote-side-padding: 1em;
        --collapse-blockquote-bottom-padding: 0.75em;
    }
}

blockquote .collapse-block,
blockquote .collapse-block.expanded {
    padding-left: var(--collapse-blockquote-side-padding);
    padding-right: var(--collapse-blockquote-side-padding);
    margin-left: calc(-1 * var(--collapse-blockquote-side-padding));
    margin-right: calc(-1 * var(--collapse-blockquote-side-padding));
}
.markdownBody blockquote > .collapse-block:last-child {
    margin-bottom: calc(-1 * var(--collapse-blockquote-bottom-padding));
}

blockquote .collapse-block > .disclosure-button {
    --collapse-button-text-color: var(--GW-collapse-in-blockquote-disclosure-button-text-color);
    --collapse-button-background-color: var(--GW-collapse-in-blockquote-disclosure-button-color);
}
blockquote .collapse-block > .disclosure-button:hover {
    --collapse-button-text-color: var(--GW-collapse-in-blockquote-disclosure-button-text-hover-color);
    --collapse-button-background-color: var(--GW-collapse-in-blockquote-disclosure-button-hover-color);
}

blockquote .collapse-block.expanded-not > .disclosure-button .part::before {
    opacity: 0.70;
}
blockquote .collapse-block.has-abstract.expanded-not > .disclosure-button .part::before {
    opacity: 1.0;
}

/*******************************************************************/
/*  “Aux links” in link bibliographies, directory indexes, and other
    transcluded (rather than pop-framed) annotations.
 */

.annotation .collapse.aux-links-container {
    --collapse-toggle-top-height: 2.25rem;

    border-top: 1px solid var(--GW-TOC-border-color);
    margin-bottom: 0;
}
.annotation p + .collapse.aux-links-container {
    margin-top: 1.25em;
}
.annotation .collapse.aux-links-container + .collapse.aux-links-container {
    margin-top: 0;
}
.annotation .TOC + .collapse.aux-links-container {
    margin-top: 0.75em;
}

/*************************/
/*  Per-section backlinks.
 */
.collapse.section-backlinks-container {
    --collapse-toggle-top-height: 2.75rem;

    margin-top: 1.25em;
    margin-bottom: 2em;
    margin-left: calc(-1 * var(--collapse-left-offset));
    padding-left: var(--collapse-left-offset);
}

.collapse.section-backlinks-container.expanded-not > .disclosure-button .part::before {
    opacity: 0.70;
}

.collapse.section-backlinks-container .section-backlinks {
    margin-top: 0.5em;
}

.collapse.section-backlinks-container .section-backlinks > ul {
    margin-top: 0.75em;
    margin-bottom: 0.5em;
}
.collapse.section-backlinks-container .section-backlinks > ul > li:last-child > blockquote {
    margin-bottom: 0.5em;
}

/*  Edge cases.
 */

.footnote > .collapse.section-backlinks-container:last-child {
    margin-bottom: 0.5em;
}
section.collapse > .collapse-content-wrapper > .collapse.section-backlinks-container:last-child {
    margin-bottom: 0;
}

/**********************************************************************/
/*  “Bare content” collapses (not a section, not code, not table, etc.)
 */

.collapse.bare-content.has-abstract {
    --collapse-toggle-top-height: 2.25rem;

    padding-left: var(--collapse-left-offset);
}

.collapse.bare-content.expanded-not > .collapse-content-wrapper > p {
    margin-left: 0.375em;
    margin-right: 0.375em;
}
.collapse.bare-content.expanded-not > .collapse-content-wrapper > p:first-child {
    margin-top: 0.125em;
}

/****************************************************/
/*  Miscellaneous/general content in collapse blocks.
 */
.collapse.expanded > .collapse-content-wrapper > :last-child {
    margin-bottom: 0.5em;
}
.collapse.no-abstract.expanded > .collapse-content-wrapper > p:first-child {
    margin-top: 0.5em;
}

.collapse section > :first-child {
    margin-left: 0;
}

/***********************/
/*  Collapse edge cases.
 */

li > .collapse-block:only-child {
    margin: 0.25em 0 0.25em 0;
}
li:last-child > .collapse-block:only-child {
    margin: 0.25em 0 0.75em 0;
}
li > .collapse-block > .collapse-content-wrapper > ul {
    margin-top: 0.125em;
}
li > .collapse-block.expanded > .collapse-content-wrapper > ul {
    margin-top: 0.5em;
}

/*  Is this necessary? Not if the other one is removed...
    —SA 2022-05-07
/*
.collapse [class^='horizontal-rule'] {
    clear: none;
}
/* ... */

